problem with turntable orbit #47263

Closed
opened 2016-01-28 11:31:39 +01:00 by item412 · 27 comments

System Information
win7 64

Blender Version
Broken: 2.76

Short description of error

If you tilt view (shift+num4/num6) orbit for rotation remains world Z, not local. From tilted point of view that makes no sense and looks like its broken.

Exact steps for others to reproduce the error
press shift+num6 several times and try to rotate view horizontally

**System Information** win7 64 **Blender Version** Broken: 2.76 **Short description of error** If you tilt view (shift+num4/num6) orbit for rotation remains world Z, not local. From tilted point of view that makes no sense and looks like its broken. **Exact steps for others to reproduce the error** press shift+num6 several times and try to rotate view horizontally
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

This is dead easy to fix (see patch below), @ideasman42 any specific reason to have current behavior?

Patch:

diff --git a/source/blender/editors/space_view3d/view3d_edit.c b/source/blender/editors/space_view3d/view3d_edit.c
index 0f40765..15fc4ca 100644
--- a/source/blender/editors/space_view3d/view3d_edit.c
+++ b/source/blender/editors/space_view3d/view3d_edit.c
@@ -4005,8 +4005,8 @@ static int vieworbit_exec(bContext *C, wmOperator *op)
 					angle = -angle;
 				}
 
-				/* z-axis */
-				axis_angle_to_quat_single(quat_mul, 'Z', angle);
+				/* View Y-axis */
+				axis_angle_to_quat(quat_mul, rv3d->viewinv[1], angle);
 			}
 			else {
 
@@ -4014,7 +4014,7 @@ static int vieworbit_exec(bContext *C, wmOperator *op)
 					angle = -angle;
 				}
 
-				/* horizontal axis */
+				/* View X-axis */
 				axis_angle_to_quat(quat_mul, rv3d->viewinv[0], angle);
 			}
 
This is dead easy to fix (see patch below), @ideasman42 any specific reason to have current behavior? Patch: ``` diff --git a/source/blender/editors/space_view3d/view3d_edit.c b/source/blender/editors/space_view3d/view3d_edit.c index 0f40765..15fc4ca 100644 --- a/source/blender/editors/space_view3d/view3d_edit.c +++ b/source/blender/editors/space_view3d/view3d_edit.c @@ -4005,8 +4005,8 @@ static int vieworbit_exec(bContext *C, wmOperator *op) angle = -angle; } - /* z-axis */ - axis_angle_to_quat_single(quat_mul, 'Z', angle); + /* View Y-axis */ + axis_angle_to_quat(quat_mul, rv3d->viewinv[1], angle); } else { @@ -4014,7 +4014,7 @@ static int vieworbit_exec(bContext *C, wmOperator *op) angle = -angle; } - /* horizontal axis */ + /* View X-axis */ axis_angle_to_quat(quat_mul, rv3d->viewinv[0], angle); } ```

Problem here is that you sometimes want current behavior, e.g. when 'looking down' without any tilt, rotating around global Z axis is most desired, we do not want to rotate around view Y axis then...

Problem here is that you sometimes want current behavior, e.g. when 'looking down' without any tilt, rotating around global Z axis is most desired, we do not want to rotate around view Y axis then...
Author

I agree, for modeling thats ok, but for sculpting/painting ability to tilt and rotate around view Y is very usefull. I think we need then switch (like in zbrush) in user preferences.

I agree, for modeling thats ok, but for sculpting/painting ability to tilt and rotate around view Y is very usefull. I think we need then switch (like in zbrush) in user preferences.

@mont29, think patched behavior is more correct/consistent (none of the other orbit keys use global axis).
However I expect some users prefer current behavior.

Interactive orbit defaults to turntable, so think its OK to change this, so num-keys all use relative axis.

@mont29, think patched behavior is more correct/consistent (none of the other orbit keys use global axis). However I expect some users prefer current behavior. Interactive orbit defaults to turntable, so think its OK to change this, so num-keys all use relative axis.

This issue was referenced by fe0ca82b23

This issue was referenced by fe0ca82b232dcab29030c4a20b8bd1b033d1d346

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @robertm

Added subscriber: @robertm

Why not make this an option? I used the old orbit behavior to quickly setup the camera for axonometric projection (useful for isometric games and tile rendering).
Now this is much more complicated.

Why not make this an option? I used the old orbit behavior to quickly setup the camera for axonometric projection (useful for isometric games and tile rendering). Now this is much more complicated.
Author

Option to rotate also with middle mouse, not only nums. There should be two turntables: world Z and view Y

Option to rotate also with middle mouse, not only nums. There should be two turntables: world Z and view Y

Added subscriber: @mooncaine

Added subscriber: @mooncaine

This breaks an existing, expected behavior. User should have an option somehow to choose the orbit behavior.

This breaks an existing, expected behavior. User should have an option somehow to choose the orbit behavior.

Added subscriber: @Leon95

Added subscriber: @Leon95

used NUM 4/6 sometimes on laptop if i don't have my mouse around. current behaviour is not really helpful in replacing the MMB function. I vote also for user preferences option.
Users even filed it as bug ^^

used NUM 4/6 sometimes on laptop if i don't have my mouse around. current behaviour is not really helpful in replacing the MMB function. I vote also for user preferences option. Users even filed it as bug ^^

Added subscriber: @CarstenWartmann

Added subscriber: @CarstenWartmann

Wow, thats a drastic change for me after >15Years of Blender. I don't like it. Even Experienced user will rotate quickly into a view which is useless but not recoverable with turning back.

Please make a Preference for the old behaiviour.

Carsten

Wow, thats a drastic change for me after >15Years of Blender. I don't like it. Even Experienced user will rotate quickly into a view which is useless but not recoverable with turning back. Please make a Preference for the old behaiviour. Carsten

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Consistency is one thing, but when it breaks an objectively useful behaviour I will argue against consistency in favour of some common sense.

This change is horrible and I want the 2.76 behaviour back.

Consistency is one thing, but when it breaks an objectively useful behaviour I will argue against consistency in favour of some common sense. This change is horrible and I want the 2.76 behaviour back.

Added subscriber: @intracube

Added subscriber: @intracube

Another vote for this being an option with the default set to the long-standing behaviour.

Kind of surprised this has suddenly changed considering the old way was expected and useful.

Edit: Just noticed the proposal to revert in D1868

Another vote for this being an option with the default set to the long-standing behaviour. Kind of surprised this has suddenly changed considering the old way was expected and useful. Edit: Just noticed the proposal to revert in [D1868](https://archive.blender.org/developer/D1868)

Added subscriber: @QuentinWenger

Added subscriber: @QuentinWenger

D1868 was an attempt of mine to add an option for both cases.

It has however been decided today in IRC that best was to revert the incrimined commit.

I thus closed my revision and 2.77a will see good ol' behavior back.

[D1868](https://archive.blender.org/developer/D1868) was an attempt of mine to add an option for both cases. It has however been decided today in IRC that best was to revert the incrimined commit. I thus closed my revision and 2.77a will see good ol' behavior back.

In #47263#365751, @QuentinWenger wrote:
D1868 was an attempt of mine to add an option for both cases.

It has however been decided today in IRC that best was to revert the incrimined commit.

I thus closed my revision and 2.77a will see good ol' behavior back.

Yep, I read the IRC backlog :)

Your patch looks like it would've been a good alternative.

> In #47263#365751, @QuentinWenger wrote: > [D1868](https://archive.blender.org/developer/D1868) was an attempt of mine to add an option for both cases. > > It has however been decided today in IRC that best was to revert the incrimined commit. > > I thus closed my revision and 2.77a will see good ol' behavior back. Yep, I read the IRC backlog :) Your patch looks like it would've been a good alternative.

This issue was referenced by 7219988258

This issue was referenced by 72199882587b20b7b72b5205cb84372fdc8da12c

'fix' was reverted. Not re-opening the task, since it’s not a bug but rather a design issue…

'fix' was reverted. Not re-opening the task, since it’s not a bug but rather a design issue…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47263
No description provided.