Fix T47263: numpad4/6 rotates around worl Z axis and not view Y axis.

Those two were the only one rotating around some world axis (turntable mode),
so better make their behavior consistent with other rotating numpad keys.

This breaks the turntable-rotation with numpad keys, though.